--- a/biodata.html
+++ b/biodata.html
@@ -165,9 +165,11 @@
   <hr>
 
   <section>
-    <h2>Galeri Pribadi</h2>
-    <img src="1.jpg.jpg" alt="Foto Profil Fazra">
-  </section>
+  <h2>Galeri Pribadi</h2>
+  <img src="https://raw.githubusercontent.com/evanridwan090906-alt/website/main/FAZRA.jpg" 
+       alt="Foto Profil Fazra" 
+       style="width:200px; border-radius:10px;">
+</section>
 
   <hr>
 
@@ -189,4 +191,5 @@
   </footer>
 
 </body>
+
 </html>
