--- a/Website Sederhana.html
+++ b/Website Sederhana.html
@@ -80,7 +80,7 @@
     <nav>
         <a href="https://fazrafatimah5-ui.github.io/fazra1.github.io/praktik.html">laporanStok</a>
         <a href="https://github.com/fazrafatimah5-ui/fazra1.github.io/commit/e2bbf3c83434deb0a767b515386d35e3684db063">Profil Pribadi</a>
-        <a href="file:///C:/Users/Thinkpad%20X260/Documents/PWD/latihan2D.html">Pengalaman</a>
+        <a href="fhttps://raw.githubusercontent.com/evanridwan090906-alt/website/main/latihan2D.html">Pengalaman</a>
     </nav>        
 
     <main>
@@ -109,4 +109,5 @@
     </script>
 
 </body>
+
 </html>
