Update Tugas Pwd 1.html

--- a/Tugas Pwd 1.html
+++ b/Tugas Pwd 1.html
@@ -35,9 +35,10 @@
   </ul>
 
   <h2>Dokumentasi Kegiatan Kampus</h2>
-  <img src="pwd1.jpg" alt="Foto saya sedang berkegiatan di kampus" width="300">
+  <img src="https://raw.githubusercontent.com/evanridwan090906-alt/website/main/jaka.jpg" alt="Foto saya sedang berkegiatan di kampus" width="300">
 <p>
   <center><h10><small>Ditulis oleh Jaka, 26 Agustus 2025</small></h10></center>
 </p>
 </body>
+
 </html>
